Test for doma-3.0-beta-1