@@ -48,14 +48,14 @@ public class AutoFunctionTest {
     public void testNoParam() throws Exception {
         FunctionDao dao = container.get(FunctionDao::get);
         Integer result = dao.func_none_param();
-        assertEquals(new Integer(10), result);
+        assertEquals(Integer.valueOf(10), result);
     }
 
     @Test
     public void testOneParam() throws Exception {
         FunctionDao dao = container.get(FunctionDao::get);
-        Integer result = dao.func_simpletype_param(new Integer(10));
-        assertEquals(new Integer(20), result);
+        Integer result = dao.func_simpletype_param(Integer.valueOf(10));
+        assertEquals(Integer.valueOf(20), result);
     }
 
     @Test
@@ -68,15 +68,16 @@ public class AutoFunctionTest {
     @Test
     public void testTwoParams() throws Exception {
         FunctionDao dao = container.get(FunctionDao::get);
-        Integer result = dao.func_dto_param(new Integer(10), new Integer(20));
-        assertEquals(new Integer(30), result);
+        Integer result = dao.func_dto_param(Integer.valueOf(10),
+                Integer.valueOf(20));
+        assertEquals(Integer.valueOf(30), result);
     }
 
     @Test
     public void testTwoParams_time() throws Exception {
         FunctionDao dao = container.get(FunctionDao::get);
         Time result = dao.func_dto_time_param(Time.valueOf("12:34:56"),
-                new Integer(20));
+                Integer.valueOf(20));
         assertEquals(Time.valueOf("12:34:56"), result);
     }
 
@@ -84,7 +85,7 @@ public class AutoFunctionTest {
     @Run(unless = { Dbms.MYSQL, Dbms.SQLSERVER })
     public void testResultSet() throws Exception {
         FunctionDao dao = container.get(FunctionDao::get);
-        List<Employee> result = dao.func_resultset(new Integer(1));
+        List<Employee> result = dao.func_resultset(Integer.valueOf(1));
         assertEquals(13, result.size());
     }
 
@@ -93,7 +94,7 @@ public class AutoFunctionTest {
     public void testResultSet_check() throws Exception {
         FunctionDao dao = container.get(FunctionDao::get);
         try {
-            dao.func_resultset_check(new Integer(1));
+            dao.func_resultset_check(Integer.valueOf(1));
             fail();
         } catch (ResultMappingException ignored) {
             System.err.println(ignored);
@@ -104,7 +105,7 @@ public class AutoFunctionTest {
     @Run(unless = { Dbms.MYSQL, Dbms.SQLSERVER })
     public void testResultSet_nocheck() throws Exception {
         FunctionDao dao = container.get(FunctionDao::get);
-        List<Employee> result = dao.func_resultset_nocheck(new Integer(1));
+        List<Employee> result = dao.func_resultset_nocheck(Integer.valueOf(1));
         assertEquals(13, result.size());
     }
 
@@ -113,7 +114,7 @@ public class AutoFunctionTest {
     public void testResultSet_map() throws Exception {
         FunctionDao dao = container.get(FunctionDao::get);
         List<Map<String, Object>> result = dao
-                .func_resultset_map(new Integer(1));
+                .func_resultset_map(Integer.valueOf(1));
         assertEquals(13, result.size());
     }
 
@@ -121,10 +122,10 @@ public class AutoFunctionTest {
     @Run(unless = { Dbms.MYSQL, Dbms.SQLSERVER })
     public void testResultSetAndUpdate() throws Exception {
         FunctionDao dao = container.get(FunctionDao::get);
-        List<Employee> result = dao.func_resultset_update(new Integer(1));
+        List<Employee> result = dao.func_resultset_update(Integer.valueOf(1));
         assertEquals(13, result.size());
         DepartmentDao departmentDao = container.get(DepartmentDao::get);
-        Department department = departmentDao.selectById(new Integer(1));
+        Department department = departmentDao.selectById(Integer.valueOf(1));
         assertEquals("HOGE", department.getDepartmentName());
     }
 
@@ -132,10 +133,10 @@ public class AutoFunctionTest {
     @Run(unless = { Dbms.MYSQL, Dbms.SQLSERVER })
     public void testResultSetAndUpdate2() throws Exception {
         FunctionDao dao = container.get(FunctionDao::get);
-        List<Employee> result = dao.func_resultset_update2(new Integer(1));
+        List<Employee> result = dao.func_resultset_update2(Integer.valueOf(1));
         assertEquals(13, result.size());
         DepartmentDao departmentDao = container.get(DepartmentDao::get);
-        Department department = departmentDao.selectById(new Integer(1));
+        Department department = departmentDao.selectById(Integer.valueOf(1));
         assertEquals("HOGE", department.getDepartmentName());
     }
 
