@@ -24,9 +24,9 @@ import org.seasar.doma.it.Container;
 import org.seasar.doma.it.Sandbox;
 import org.seasar.doma.it.dao.DepartmentDao;
 import org.seasar.doma.it.dao.DeptDao;
-import org.seasar.doma.it.domain.Identity;
 import org.seasar.doma.it.entity.Department;
 import org.seasar.doma.it.entity.Dept;
+import org.seasar.doma.it.holder.Identity;
 import org.seasar.doma.jdbc.Result;
 
 public class SqlFileInsertTest {
@@ -47,9 +47,10 @@ public class SqlFileInsertTest {
         int result = dao.insertBySqlFile(department);
         assertEquals(1, result);
 
-        department = dao.selectById(new Integer(99));
-        assertEquals(new Integer(99), department.getDepartmentId().getValue());
-        assertEquals(new Integer(99), department.getDepartmentNo());
+        department = dao.selectById(Integer.valueOf(99));
+        assertEquals(Integer.valueOf(99),
+                department.getDepartmentId().getValue());
+        assertEquals(Integer.valueOf(99), department.getDepartmentNo());
     }
 
     @Test
@@ -61,9 +62,9 @@ public class SqlFileInsertTest {
         dept = result.getEntity();
         assertEquals("hoge_preI_postI", dept.getDepartmentName());
 
-        dept = dao.selectById(new Integer(99));
-        assertEquals(new Integer(99), dept.getDepartmentId().getValue());
-        assertEquals(new Integer(99), dept.getDepartmentNo());
+        dept = dao.selectById(Integer.valueOf(99));
+        assertEquals(Integer.valueOf(99), dept.getDepartmentId().getValue());
+        assertEquals(Integer.valueOf(99), dept.getDepartmentNo());
         assertEquals("hoge_preI", dept.getDepartmentName());
     }
 }
