@@ -46,39 +46,39 @@ public class SqlFileSelectPagingTest {
     @Test
     public void testLimitOffset() throws Exception {
         EmployeeDao dao = container.get(EmployeeDao::get);
-        List<Employee> employees = dao.selectAll(SelectOptions.get().limit(5)
-                .offset(3));
+        List<Employee> employees = dao
+                .selectAll(SelectOptions.get().limit(5).offset(3));
         assertEquals(5, employees.size());
-        assertEquals(new Integer(4), employees.get(0).getEmployeeId());
-        assertEquals(new Integer(5), employees.get(1).getEmployeeId());
-        assertEquals(new Integer(6), employees.get(2).getEmployeeId());
-        assertEquals(new Integer(7), employees.get(3).getEmployeeId());
-        assertEquals(new Integer(8), employees.get(4).getEmployeeId());
+        assertEquals(Integer.valueOf(4), employees.get(0).getEmployeeId());
+        assertEquals(Integer.valueOf(5), employees.get(1).getEmployeeId());
+        assertEquals(Integer.valueOf(6), employees.get(2).getEmployeeId());
+        assertEquals(Integer.valueOf(7), employees.get(3).getEmployeeId());
+        assertEquals(Integer.valueOf(8), employees.get(4).getEmployeeId());
     }
 
     @Test
     public void testLimitOffset_offsetIsZero() throws Exception {
         EmployeeDao dao = container.get(EmployeeDao::get);
-        List<Employee> employees = dao.selectAll(SelectOptions.get().limit(5)
-                .offset(0));
+        List<Employee> employees = dao
+                .selectAll(SelectOptions.get().limit(5).offset(0));
         assertEquals(5, employees.size());
-        assertEquals(new Integer(1), employees.get(0).getEmployeeId());
-        assertEquals(new Integer(2), employees.get(1).getEmployeeId());
-        assertEquals(new Integer(3), employees.get(2).getEmployeeId());
-        assertEquals(new Integer(4), employees.get(3).getEmployeeId());
-        assertEquals(new Integer(5), employees.get(4).getEmployeeId());
+        assertEquals(Integer.valueOf(1), employees.get(0).getEmployeeId());
+        assertEquals(Integer.valueOf(2), employees.get(1).getEmployeeId());
+        assertEquals(Integer.valueOf(3), employees.get(2).getEmployeeId());
+        assertEquals(Integer.valueOf(4), employees.get(3).getEmployeeId());
+        assertEquals(Integer.valueOf(5), employees.get(4).getEmployeeId());
     }
 
     @Test
     public void testLimitOffset_limitIsZero() throws Exception {
         EmployeeDao dao = container.get(EmployeeDao::get);
-        List<Employee> employees = dao.selectAll(SelectOptions.get().limit(0)
-                .offset(10));
+        List<Employee> employees = dao
+                .selectAll(SelectOptions.get().limit(0).offset(10));
         assertEquals(4, employees.size());
-        assertEquals(new Integer(11), employees.get(0).getEmployeeId());
-        assertEquals(new Integer(12), employees.get(1).getEmployeeId());
-        assertEquals(new Integer(13), employees.get(2).getEmployeeId());
-        assertEquals(new Integer(14), employees.get(3).getEmployeeId());
+        assertEquals(Integer.valueOf(11), employees.get(0).getEmployeeId());
+        assertEquals(Integer.valueOf(12), employees.get(1).getEmployeeId());
+        assertEquals(Integer.valueOf(13), employees.get(2).getEmployeeId());
+        assertEquals(Integer.valueOf(14), employees.get(3).getEmployeeId());
     }
 
     @Test
@@ -86,11 +86,11 @@ public class SqlFileSelectPagingTest {
         EmployeeDao dao = container.get(EmployeeDao::get);
         List<Employee> employees = dao.selectAll(SelectOptions.get().limit(5));
         assertEquals(5, employees.size());
-        assertEquals(new Integer(1), employees.get(0).getEmployeeId());
-        assertEquals(new Integer(2), employees.get(1).getEmployeeId());
-        assertEquals(new Integer(3), employees.get(2).getEmployeeId());
-        assertEquals(new Integer(4), employees.get(3).getEmployeeId());
-        assertEquals(new Integer(5), employees.get(4).getEmployeeId());
+        assertEquals(Integer.valueOf(1), employees.get(0).getEmployeeId());
+        assertEquals(Integer.valueOf(2), employees.get(1).getEmployeeId());
+        assertEquals(Integer.valueOf(3), employees.get(2).getEmployeeId());
+        assertEquals(Integer.valueOf(4), employees.get(3).getEmployeeId());
+        assertEquals(Integer.valueOf(5), employees.get(4).getEmployeeId());
     }
 
     @Test
@@ -99,10 +99,10 @@ public class SqlFileSelectPagingTest {
         List<Employee> employees = dao
                 .selectAll(SelectOptions.get().offset(10));
         assertEquals(4, employees.size());
-        assertEquals(new Integer(11), employees.get(0).getEmployeeId());
-        assertEquals(new Integer(12), employees.get(1).getEmployeeId());
-        assertEquals(new Integer(13), employees.get(2).getEmployeeId());
-        assertEquals(new Integer(14), employees.get(3).getEmployeeId());
+        assertEquals(Integer.valueOf(11), employees.get(0).getEmployeeId());
+        assertEquals(Integer.valueOf(12), employees.get(1).getEmployeeId());
+        assertEquals(Integer.valueOf(13), employees.get(2).getEmployeeId());
+        assertEquals(Integer.valueOf(14), employees.get(3).getEmployeeId());
     }
 
 }
