@@ -26,12 +26,12 @@ import org.seasar.doma.it.Sandbox;
 import org.seasar.doma.it.dao.DepartmentDao;
 import org.seasar.doma.it.dao.DeptDao;
 import org.seasar.doma.it.dao.StaffDao;
-import org.seasar.doma.it.domain.Identity;
-import org.seasar.doma.it.domain.Salary;
 import org.seasar.doma.it.entity.Department;
 import org.seasar.doma.it.entity.Dept;
 import org.seasar.doma.it.entity.Staff;
 import org.seasar.doma.it.entity.StaffInfo;
+import org.seasar.doma.it.holder.Identity;
+import org.seasar.doma.it.holder.Salary;
 import org.seasar.doma.jdbc.OptimisticLockException;
 import org.seasar.doma.jdbc.Result;
 
@@ -55,9 +55,10 @@ public class SqlFileUpdateTest {
         assertEquals(1, result);
 
         department = dao.selectById(1);
-        assertEquals(new Integer(1), department.getDepartmentId().getValue());
+        assertEquals(Integer.valueOf(1),
+                department.getDepartmentId().getValue());
         assertEquals("hoge", department.getDepartmentName());
-        assertEquals(new Integer(2), department.getVersion());
+        assertEquals(Integer.valueOf(2), department.getVersion());
     }
 
     @Test
@@ -72,9 +73,10 @@ public class SqlFileUpdateTest {
         assertEquals(1, result);
 
         department = dao.selectById(1);
-        assertEquals(new Integer(1), department.getDepartmentId().getValue());
+        assertEquals(Integer.valueOf(1),
+                department.getDepartmentId().getValue());
         assertEquals("hoge", department.getDepartmentName());
-        assertEquals(new Integer(2), department.getVersion());
+        assertEquals(Integer.valueOf(2), department.getVersion());
     }
 
     @Test
@@ -87,9 +89,9 @@ public class SqlFileUpdateTest {
         assertEquals("hoge_preU_postU", dept.getDepartmentName());
 
         dept = dao.selectById(1);
-        assertEquals(new Integer(1), dept.getDepartmentId().getValue());
+        assertEquals(Integer.valueOf(1), dept.getDepartmentId().getValue());
         assertEquals("hoge_preU", dept.getDepartmentName());
-        assertEquals(new Integer(2), dept.getVersion());
+        assertEquals(Integer.valueOf(2), dept.getVersion());
     }
 
     @Test
@@ -132,9 +134,10 @@ public class SqlFileUpdateTest {
         assertEquals(1, result);
 
         department = dao.selectById(1);
-        assertEquals(new Integer(1), department.getDepartmentId().getValue());
+        assertEquals(Integer.valueOf(1),
+                department.getDepartmentId().getValue());
         assertEquals("hoge", department.getDepartmentName());
-        assertEquals(new Integer(2), department.getVersion());
+        assertEquals(Integer.valueOf(2), department.getVersion());
     }
 
     @Test
@@ -142,8 +145,8 @@ public class SqlFileUpdateTest {
         StaffDao dao = container.get(StaffDao::get);
         Staff staff = dao.selectById(1);
         staff.employeeName = "hoge";
-        staff.staffInfo = new StaffInfo(staff.staffInfo.hiredate, new Salary(
-                "5000"));
+        staff.staffInfo = new StaffInfo(staff.staffInfo.hiredate,
+                new Salary("5000"));
         int result = dao.updateBySqlFile(staff);
         assertEquals(1, result);
         assertEquals(2, staff.version.intValue());
